--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "prestart": "npm run build",
     "start": "node index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
