--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   
   "author": "",
   "license": "ISC",
